--- a/src/revised_case_normalization/old_notebooks/Hirslanden_Zurich_2019_normalization.ipynb
+++ b/src/revised_case_normalization/old_notebooks/Hirslanden_Zurich_2019_normalization.ipynb
@@ -93,7 +93,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d3b76f08-f24f-4a36-9456-5f0f575dd8f9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -366,7 +370,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fa53a5d5-bfb3-4037-93bf-5ff47d0d1e3a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -434,7 +442,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "db3c4ed2-14ca-40ca-8cc3-c0e3e0ffa0af",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -455,7 +467,11 @@
   {
    "cell_type": "markdown",
    "id": "f4b13f61-a6d4-4e1c-b188-a27ad7c4bb2e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Check if there are duplicated case_ids, if yes, delete them"
    ]
@@ -464,17 +480,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c275f35d-c024-463b-b3ff-d794edefd662",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
      "evalue": "name 'revised_case_id_stripped' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Delete duplicated case_id in this hospital.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m revised_case_id_stripped_set \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(revised_case_id_stripped)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(revised_case_id_stripped) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(revised_case_id_stripped_set):\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThere are duplicated case_ids in the revised case.\u001b[39m\u001b[38;5;124m'\u001b[39m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'revised_case_id_stripped' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [1], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Delete duplicated case_id in this hospital.\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m revised_case_id_stripped_set \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m(revised_case_id_stripped)\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(revised_case_id_stripped) \u001B[38;5;241m>\u001B[39m \u001B[38;5;28mlen\u001B[39m(revised_case_id_stripped_set):\n\u001B[1;32m      5\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mThere are duplicated case_ids in the revised case.\u001B[39m\u001B[38;5;124m'\u001B[39m )\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'revised_case_id_stripped' is not defined"
      ]
     }
    ],
@@ -729,7 +749,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "72a903f0-1223-45d7-9990-3ea0f87b0572",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -750,7 +774,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "701a00d6-6def-4684-8b86-cee45770a340",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -770,7 +798,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "9099ca23-dd60-46a7-b08e-2e5491b03f25",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# delete duplicated cases in the revised cases\n",
@@ -785,7 +817,11 @@
   {
    "cell_type": "markdown",
    "id": "2ca017a6-10c8-4e8e-be88-f5d954db9caf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Forming the normalized dataframe: Merge the selected revised case data with the matched from bfs data\n",
     "  If there are multiple cases were found based on case_id, patient_id will be used to match once more  \n",
@@ -796,7 +832,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "dcacf441-b992-4716-aac9-c6747d275c95",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -955,7 +995,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "2bc9512c-8615-4f3d-b833-f8e7367be33a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1189,7 +1233,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "681b6dc6-24d5-4d27-9483-5355151652db",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1529,7 +1577,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20e4b5fb-7d66-4ecf-90d7-f93e28579e13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
