[2022-42] Drafting solution to read revisions from BfS DB

--- a/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -222,7 +222,7 @@
       "text/plain": "    aimedic_id new_pd     added_icds removed_icds added_chops removed_chops\n0       115875  I7024        [J4481]      [J4483]          []            []\n1       116851  I5001          [R18]           []          []            []\n2       117722  I7024         [I743]           []          []            []\n3       118215   I495         [N182]           []          []            []\n4       120279  I7024   [N184, T828]           []          []            []\n5       116472  I5014        [E1191]      [E1190]          []            []\n6       117999   N390         [B370]           []          []            []\n7       120078   N390         [E440]           []    [890A32]            []\n8       119991  N1781        [J9610]           []          []            []\n9       121288   I208        [J9580]           []          []            []\n10      121387   D384  [I483, J9580]           []          []            []\n11      121768   I350          [J91]           []          []            []\n12      121893   N390        [E1191]      [E1190]          []            []\n13      122148  S2206         [D689]           []          []            []\n14      123146  I7022         [D686]           []          []            []\n15      124638  M4807        [D6823]           []          []            []\n16      125114   C250         [F058]           []          []            []",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>aimedic_id</th>\n      <th>new_pd</th>\n      <th>added_icds</th>\n      <th>removed_icds</th>\n      <th>added_chops</th>\n      <th>removed_chops</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>115875</td>\n      <td>I7024</td>\n      <td>[J4481]</td>\n      <td>[J4483]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>116851</td>\n      <td>I5001</td>\n      <td>[R18]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>117722</td>\n      <td>I7024</td>\n      <td>[I743]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>118215</td>\n      <td>I495</td>\n      <td>[N182]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>120279</td>\n      <td>I7024</td>\n      <td>[N184, T828]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>116472</td>\n      <td>I5014</td>\n      <td>[E1191]</td>\n      <td>[E1190]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>117999</td>\n      <td>N390</td>\n      <td>[B370]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>120078</td>\n      <td>N390</td>\n      <td>[E440]</td>\n      <td>[]</td>\n      <td>[890A32]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>119991</td>\n      <td>N1781</td>\n      <td>[J9610]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>121288</td>\n      <td>I208</td>\n      <td>[J9580]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>121387</td>\n      <td>D384</td>\n      <td>[I483, J9580]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>121768</td>\n      <td>I350</td>\n      <td>[J91]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>121893</td>\n      <td>N390</td>\n      <td>[E1191]</td>\n      <td>[E1190]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>122148</td>\n      <td>S2206</td>\n      <td>[D689]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>123146</td>\n      <td>I7022</td>\n      <td>[D686]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>124638</td>\n      <td>M4807</td>\n      <td>[D6823]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>125114</td>\n      <td>C250</td>\n      <td>[F058]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,10 +245,17 @@
     "num_unmatched = unmatched.shape[0]\n",
     "print(f'{num_unmatched} rows could not be matched, given {sorted(cols_to_join)}')\n",
     "\n",
-    "joined\n",
-    "\n",
-    "\n"
+    "joined\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
