[2022-42] Include new JAR with multiple case grouper

--- a/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
@@ -86,8 +86,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-26 14:54:57.018 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
-      "2022-10-26 14:54:57.022 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
+      "2022-10-27 07:55:06.654 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
+      "2022-10-27 07:55:06.658 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -118,13 +118,13 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-10-26 14:54:57.028 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-10-26 14:54:57.031 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-10-26 14:54:57.033 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-10-26 14:54:57.035 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-10-26 14:54:57.036 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-10-26 14:54:57.041 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-10-26 14:54:57.043 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
+      "2022-10-27 07:55:06.664 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-10-27 07:55:06.666 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-10-27 07:55:06.669 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-10-27 07:55:06.672 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-10-27 07:55:06.672 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-10-27 07:55:06.677 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-10-27 07:55:06.680 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-26 14:54:59.648 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:124 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
+      "2022-10-27 07:55:07.600 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:124 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
      ]
     },
     {
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "bade6ed7-d9d3-41fb-a082-d559c1467340",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"DRG\" : \"F62B\", \"MDC\" : \"05\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}\n"
+      "[{\"DRG\" : \"F62B\", \"MDC\" : \"05\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}, {\"DRG\" : \"F59B\", \"MDC\" : \"05\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}, {\"DRG\" : \"F71A\", \"MDC\" : \"05\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}]\n"
      ]
     }
    ],
@@ -2267,12 +2267,22 @@
     "grouper_result = subprocess.check_output([\"java\",\n",
     "                                \"-cp\",\n",
     "                                \"/home/jovyan/work/resources/aimedic-grouper-assembly-0.0.0-SNAPSHOT.jar\",\n",
-    "                                \"ch.aimedic.grouper.BatchGrouper\",\n",
+    "                                \"ch.aimedic.grouper.BatchGroupeOne\",\n",
     "                                grouper_input_data_string[1]\n",
     "                                #test_df_line,\n",
     "                                ]).decode(\"utf-8\")\n",
     "\n",
-    "print(grouper_result)"
+    "\n",
+    "grouperResults = subprocess.check_output([\"java\",\n",
+    "                                \"-cp\",\n",
+    "                                \"/home/jovyan/work/resources/aimedic-grouper-assembly-0.0.0-SNAPSHOT.jar\",\n",
+    "                                \"ch.aimedic.grouper.BatchGroupMany\",\n",
+    "                                f'{grouper_input_data_string[1]}#{grouper_input_data_string[2]}#{grouper_input_data_string[3]}',\n",
+    "                                \"#\"\n",
+    "                                #test_df_line,\n",
+    "                                ]).decode(\"utf-8\")\n",
+    "\n",
+    "print(grouperResults)"
    ]
   },
   {
